--- a/projects/aurore-boreale.html
+++ b/projects/aurore-boreale.html
@@ -1,56 +1,32 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr" data-theme="light">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>aurore boréale · identité immersive signée petitchardon</title>
-    <meta
-      name="description"
-      content="Identité visuelle immersive pour Aurore Boréale : univers lumineux, textures aurorales et storytelling sensoriel conçus par petitchardon."
-    />
+    <title>Page en construction | petitchardon</title>
+    <meta name="description" content="Cette page projet est en construction. Revenez bientot pour decouvrir le contenu." />
     <meta name="author" content="petitchardon" />
-    <meta property="og:title" content="aurore boréale · identité immersive signée petitchardon" />
-    <meta
-      property="og:description"
-      content="Créez une expérience polysensorielle : découvrez l'identité lumineuse imaginée pour Aurore Boréale."
-    />
-    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Page en construction | petitchardon" />
+    <meta property="og:description" content="Cette page projet est en construction. Revenez bientot pour decouvrir le contenu." />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.petitchardon.fr/projects/aurore-boreale.html" />
-    <meta property="og:image" content="https://www.petitchardon.fr/assets/images/project-aurore-hero.svg" />
+    <meta property="og:image" content="https://www.petitchardon.fr/assets/images/logo-petitchardon.svg" />
     <meta property="og:site_name" content="petitchardon" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="aurore boréale · identité immersive signée petitchardon" />
-    <meta
-      name="twitter:description"
-      content="Créez une expérience polysensorielle : découvrez l'identité lumineuse imaginée pour Aurore Boréale."
-    />
-    <meta name="twitter:image" content="https://www.petitchardon.fr/assets/images/project-aurore-hero.svg" />
+    <meta name="twitter:title" content="Page en construction | petitchardon" />
+    <meta name="twitter:description" content="Cette page projet est en construction. Revenez bientot pour decouvrir le contenu." />
+    <meta name="twitter:image" content="https://www.petitchardon.fr/assets/images/logo-petitchardon.svg" />
     <link rel="canonical" href="https://www.petitchardon.fr/projects/aurore-boreale.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preload" href="../assets/fonts/Roca-Font/Roca%20Black.ttf" as="font" type="font/ttf" crossorigin />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" />
     <link rel="stylesheet" href="../css/style.css" />
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "CreativeWork",
-        "name": "aurore boréale",
-        "alternateName": "aurora borealis",
-        "description": "Identité visuelle immersive pour Aurore Boréale : univers lumineux, textures aurorales et storytelling sensoriel conçus par petitchardon.",
-        "inLanguage": ["fr", "en"],
-        "url": "https://www.petitchardon.fr/projects/aurore-boreale.html",
-        "creator": "petitchardon",
-        "author": "Anne Della Gaspera",
-        "image": "https://www.petitchardon.fr/assets/images/project-aurore-hero.svg",
-        "keywords": ["identité visuelle", "direction artistique", "rédaction", "expérience immersive"]
-      }
-    </script>
   </head>
-  <body data-page="project-aurore">
+  <body data-page="project-placeholder">
     <a class="skip-link" href="#contenu-principal" data-i18n-en="skip to content">passer au contenu</a>
     <div class="background-layers" aria-hidden="true">
       <span class="background-layers__orb background-layers__orb--primary"></span>
@@ -80,13 +56,13 @@
             aria-label="Changer la langue"
             data-i18n-en-aria-label="Switch language"
           >
-            <span data-i18n-en="en · fr">fr · en</span>
+            <span data-i18n-en="en | fr">fr | en</span>
           </button>
           <button
             class="theme-toggle"
             type="button"
             data-theme-toggle
-            aria-label="Basculer le thème"
+            aria-label="Basculer le theme"
             data-i18n-en-aria-label="Toggle theme"
           >
             <span class="theme-toggle__icon" data-theme-icon aria-hidden="true"></span>
@@ -113,17 +89,17 @@
             aria-label="Changer la langue"
             data-i18n-en-aria-label="Switch language"
           >
-            <span data-i18n-en="en · fr">fr · en</span>
+            <span data-i18n-en="en | fr">fr | en</span>
           </button>
           <button
             class="theme-toggle theme-toggle--mobile"
             type="button"
             data-theme-toggle
-            aria-label="Basculer le thème"
+            aria-label="Basculer le theme"
             data-i18n-en-aria-label="Toggle theme"
           >
             <span class="theme-toggle__icon" data-theme-icon aria-hidden="true"></span>
-            <span class="theme-toggle__label" data-i18n-en="toggle theme">basculer le thème</span>
+            <span class="theme-toggle__label" data-i18n-en="toggle theme">basculer le theme</span>
           </button>
         </div>
       </nav>
@@ -133,128 +109,19 @@
       <section class="project-hero" data-animate="fade-up">
         <div class="container project-hero__inner">
           <div class="project-hero__intro glass-surface">
-            <p class="breadcrumb" data-i18n-en="portfolio / aurora borealis">portfolio / aurore boréale</p>
-            <h1 data-i18n-en="aurora borealis">aurore boréale</h1>
-            <p
-              data-i18n-en="Crafting a multi-sensory identity for an immersive events brand inspired by northern lights. A luminous, magnetic and modular system."
-            >
-              Créer une expérience polysensorielle pour une marque d’événements immersifs inspirés des aurores polaires. Un
-              univers lumineux, magnétique et modulable.
+            <p class="breadcrumb" data-i18n-en="portfolio">portfolio</p>
+            <h1 data-i18n-en="page under construction">page en construction</h1>
+            <p data-i18n-en="This project page is being assembled. Check back soon for details.">
+              Cette page projet est en construction. Revenez bientot pour decouvrir le contenu.
             </p>
-            <dl class="project-meta">
-              <div>
-                <dt data-i18n-en="client">cliente</dt>
-                <dd data-i18n-en="aurora borealis · immersive studio">aurore boréale · studio d’expériences</dd>
-              </div>
-              <div>
-                <dt data-i18n-en="scope">missions</dt>
-                <dd data-i18n-en="visual identity, art direction, manifesto copywriting">
-                  identité visuelle, direction artistique, rédaction manifeste
-                </dd>
-              </div>
-              <div>
-                <dt data-i18n-en="year">année</dt>
-                <dd>2025</dd>
-              </div>
-            </dl>
-          </div>
-          <figure class="project-hero__visual glass-surface" data-tilt>
-            <img
-              src="../assets/images/project-aurore-hero.svg"
-              alt="Compositions identitaires d'Aurore Boréale avec halos lumineux"
-              width="520"
-              height="520"
-            />
-          </figure>
-        </div>
-      </section>
-
-      <section class="project-story" data-animate="fade-in">
-        <div class="container project-story__inner">
-          <article class="glass-surface">
-            <h2 data-i18n-en="a compass-free dive">une immersion sans boussole</h2>
-            <p
-              data-i18n-en="Aurora Borealis stages inner journeys guided by light and sound. The identity had to feel magnetic, almost otherworldly, to amplify the feeling of escaping daily life."
-            >
-              Aurore Boréale met en scène des voyages intérieurs guidés par la lumière et le son. L’identité devait amplifier
-              cette déconnexion totale du quotidien.
-            </p>
-            <p
-              data-i18n-en="I designed a visual language built on moving colour halos, a bold typographic voice and editorial cues that invite audiences to step into the unknown."
-            >
-              J’ai imaginé un langage visuel fondé sur des halos en mouvement, une voix typographique assumée et des textes qui
-              invitent à franchir le seuil de l’inconnu.
-            </p>
-            <ul>
-              <li
-                data-i18n-en="Aurora palette choreographed around polar greens and blues, heightened by the neon accent D9F20C."
-              >
-                Palette chorégraphiée autour des verts et bleus polaires, boostée par l’accent néon D9F20C.
-              </li>
-              <li
-                data-i18n-en="Luminous textures manually crafted to suggest motion, depth and soft gradients of light."
-              >
-                Textures lumineuses créées en atelier numérique pour suggérer le mouvement et la profondeur.
-              </li>
-              <li data-i18n-en="Engaging editorial tone that turns contemplation into an active exploration.">
-                Voix éditoriale engageante qui transforme la contemplation en exploration active.
-              </li>
-            </ul>
-          </article>
-          <aside class="project-sidenote glass-surface">
-            <h3 data-i18n-en="deliverables">livrables</h3>
-            <ul>
-              <li data-i18n-en="brand manifesto & narrative arcs">manifeste de marque & arcs narratifs</li>
-              <li data-i18n-en="identity system & motion guidelines">système d’identité & guide motion</li>
-              <li data-i18n-en="immersive ticketing & signage kit">kit billetterie immersive & signalétique</li>
-            </ul>
-          </aside>
-        </div>
-      </section>
-
-      <section class="project-gallery" data-animate="fade-up">
-        <div class="container project-gallery__grid">
-          <figure class="glass-surface">
-            <img
-              src="../assets/images/project-aurore-board.svg"
-              alt="Planche d’identité Aurore Boréale"
-              width="720"
-              height="520"
-              loading="lazy"
-            />
-            <figcaption data-i18n-en="Identity board for Aurora Borealis">Planche d’identité Aurore Boréale</figcaption>
-          </figure>
-          <figure class="glass-surface">
-            <img
-              src="../assets/images/project-aurore-mockup.svg"
-              alt="Mockup billetterie et interface immersive Aurore Boréale"
-              width="720"
-              height="520"
-              loading="lazy"
-            />
-            <figcaption data-i18n-en="Immersive ticketing mockup">Mockup billetterie immersive</figcaption>
-          </figure>
-        </div>
-      </section>
-
-      <section class="project-cta glass-surface" data-animate="fade-in">
-        <div class="container project-cta__inner">
-          <div class="project-cta__text">
-            <h2 data-i18n-en="ready to let your brand glow?">prêt·e à faire briller votre marque ?</h2>
-            <p
-              data-i18n-en="Your universe deserves a sensorial treatment that feels true to it. Let’s talk ambitions and design an identity that captures imaginations."
-            >
-              Votre univers mérite un traitement sensoriel qui lui ressemble. Parlons ambitions et dessinons une identité qui
-              capte l’imaginaire.
-            </p>
-          </div>
-          <div class="project-cta__actions">
-            <a class="btn btn--primary" href="../index.html#contact" data-i18n-en="start your project"
-              >démarrer votre projet</a
-            >
-            <a class="btn btn--ghost" href="../index.html#portfolio" data-i18n-en="back to portfolio"
-              >retour au portfolio</a
-            >
+            <div class="project-cta__actions">
+              <a class="btn btn--primary" href="../index.html#portfolio" data-i18n-en="back to portfolio">
+                retour au portfolio
+              </a>
+              <a class="btn btn--ghost" href="../index.html#contact" data-i18n-en="contact">
+                contact
+              </a>
+            </div>
           </div>
         </div>
       </section>
@@ -265,7 +132,7 @@
         <div class="footer__brand">
           <img src="../assets/images/logo-petitchardon.svg" alt="petitchardon" width="140" height="56" />
           <p data-i18n-en="Creative studio crafting bold brand identities, illustrations and storytelling.">
-            Studio créatif pour identités visuelles, illustrations et récits de marque à forte personnalité.
+            Studio creatif pour identites visuelles, illustrations et recits de marque a forte personnalite.
           </p>
         </div>
         <div class="footer__links">
@@ -278,7 +145,7 @@
           </ul>
         </div>
         <div class="footer__social">
-          <h3 data-i18n-en="stay connected">restez connectée</h3>
+          <h3 data-i18n-en="stay connected">restez connecte</h3>
           <ul>
             <li><a href="https://www.instagram.com/petitchardon" target="_blank" rel="noreferrer">instagram</a></li>
             <li><a href="https://www.behance.net/petitchardon" target="_blank" rel="noreferrer">behance</a></li>
@@ -286,12 +153,12 @@
           </ul>
         </div>
         <div class="footer__legal" id="mentions-legales">
-          <h3 data-i18n-en="legal">mentions légales</h3>
+          <h3 data-i18n-en="legal">mentions legales</h3>
           <p
-            data-i18n-en="© <span id=&quot;annee-actuelle&quot;></span> petitchardon · All rights reserved · SIREN 000 000 000. Data used only to reply to your request. Hosting: to be completed. Publisher: Anne, petitchardon."
+            data-i18n-en="© <span id=\"annee-actuelle\"></span> petitchardon | All rights reserved | SIREN 000 000 000. Data used only to reply to your request. Hosting: to be completed. Publisher: Anne, petitchardon."
           >
-            © <span id="annee-actuelle"></span> petitchardon · Tous droits réservés · SIREN 000 000 000. Données utilisées
-            uniquement pour répondre à votre demande. Hébergement : à compléter. Responsable de publication : Anne, petitchardon.
+            © <span id="annee-actuelle"></span> petitchardon | Tous droits reserves | SIREN 000 000 000. Donnees utilisees
+            uniquement pour repondre a votre demande. Hebergement : a completer. Responsable de publication : Anne, petitchardon.
           </p>
         </div>
       </div>
