--- a/projects/constellation.html
+++ b/projects/constellation.html
@@ -1,55 +1,32 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr" data-theme="light">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>constellation · univers illustré par petitchardon</title>
-    <meta
-      name="description"
-      content="Identité illustrée pour Constellation : palette aurorale, personnages inclusifs et storytelling d'exploration conçus par petitchardon."
-    />
+    <title>Page en construction | petitchardon</title>
+    <meta name="description" content="Cette page projet est en construction. Revenez bientot pour decouvrir le contenu." />
     <meta name="author" content="petitchardon" />
-    <meta property="og:title" content="constellation · univers illustré par petitchardon" />
-    <meta
-      property="og:description"
-      content="Plongez dans l'univers illustré créé pour Constellation, collectif d'autrices jeunesse engagé."
-    />
-    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Page en construction | petitchardon" />
+    <meta property="og:description" content="Cette page projet est en construction. Revenez bientot pour decouvrir le contenu." />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.petitchardon.fr/projects/constellation.html" />
-    <meta property="og:image" content="https://www.petitchardon.fr/assets/images/project-constellation-hero.svg" />
+    <meta property="og:image" content="https://www.petitchardon.fr/assets/images/logo-petitchardon.svg" />
     <meta property="og:site_name" content="petitchardon" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="constellation · univers illustré par petitchardon" />
-    <meta
-      name="twitter:description"
-      content="Plongez dans l'univers illustré créé pour Constellation, collectif d'autrices jeunesse engagé."
-    />
-    <meta name="twitter:image" content="https://www.petitchardon.fr/assets/images/project-constellation-hero.svg" />
+    <meta name="twitter:title" content="Page en construction | petitchardon" />
+    <meta name="twitter:description" content="Cette page projet est en construction. Revenez bientot pour decouvrir le contenu." />
+    <meta name="twitter:image" content="https://www.petitchardon.fr/assets/images/logo-petitchardon.svg" />
     <link rel="canonical" href="https://www.petitchardon.fr/projects/constellation.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preload" href="../assets/fonts/Roca-Font/Roca%20Black.ttf" as="font" type="font/ttf" crossorigin />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" />
     <link rel="stylesheet" href="../css/style.css" />
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "CreativeWork",
-        "name": "constellation",
-        "description": "Identité illustrée pour Constellation : palette aurorale, personnages inclusifs et storytelling d'exploration conçus par petitchardon.",
-        "inLanguage": ["fr", "en"],
-        "url": "https://www.petitchardon.fr/projects/constellation.html",
-        "creator": "petitchardon",
-        "author": "Anne Della Gaspera",
-        "image": "https://www.petitchardon.fr/assets/images/project-constellation-hero.svg",
-        "keywords": ["identité illustrée", "direction artistique", "illustration", "univers digital", "storytelling"]
-      }
-    </script>
   </head>
-  <body data-page="project-constellation">
+  <body data-page="project-placeholder">
     <a class="skip-link" href="#contenu-principal" data-i18n-en="skip to content">passer au contenu</a>
     <div class="background-layers" aria-hidden="true">
       <span class="background-layers__orb background-layers__orb--primary"></span>
@@ -79,13 +56,13 @@
             aria-label="Changer la langue"
             data-i18n-en-aria-label="Switch language"
           >
-            <span data-i18n-en="en · fr">fr · en</span>
+            <span data-i18n-en="en | fr">fr | en</span>
           </button>
           <button
             class="theme-toggle"
             type="button"
             data-theme-toggle
-            aria-label="Basculer le thème"
+            aria-label="Basculer le theme"
             data-i18n-en-aria-label="Toggle theme"
           >
             <span class="theme-toggle__icon" data-theme-icon aria-hidden="true"></span>
@@ -112,17 +89,17 @@
             aria-label="Changer la langue"
             data-i18n-en-aria-label="Switch language"
           >
-            <span data-i18n-en="en · fr">fr · en</span>
+            <span data-i18n-en="en | fr">fr | en</span>
           </button>
           <button
             class="theme-toggle theme-toggle--mobile"
             type="button"
             data-theme-toggle
-            aria-label="Basculer le thème"
+            aria-label="Basculer le theme"
             data-i18n-en-aria-label="Toggle theme"
           >
             <span class="theme-toggle__icon" data-theme-icon aria-hidden="true"></span>
-            <span class="theme-toggle__label" data-i18n-en="toggle theme">basculer le thème</span>
+            <span class="theme-toggle__label" data-i18n-en="toggle theme">basculer le theme</span>
           </button>
         </div>
       </nav>
@@ -132,120 +109,19 @@
       <section class="project-hero" data-animate="fade-up">
         <div class="container project-hero__inner">
           <div class="project-hero__intro glass-surface">
-            <p class="breadcrumb" data-i18n-en="portfolio / constellation">portfolio / constellation</p>
-            <h1 data-i18n-en="constellation">constellation</h1>
-            <p
-              data-i18n-en="Building an illustrated world for a youth authors collective championing diversity and curiosity."
-            >
-              Construire un univers illustré pour un collectif d’autrices jeunesse qui prône diversité et curiosité.
+            <p class="breadcrumb" data-i18n-en="portfolio">portfolio</p>
+            <h1 data-i18n-en="page under construction">page en construction</h1>
+            <p data-i18n-en="This project page is being assembled. Check back soon for details.">
+              Cette page projet est en construction. Revenez bientot pour decouvrir le contenu.
             </p>
-            <dl class="project-meta">
-              <div>
-                <dt data-i18n-en="client">cliente</dt>
-                <dd data-i18n-en="constellation · editorial collective">constellation · collectif éditorial</dd>
-              </div>
-              <div>
-                <dt data-i18n-en="scope">missions</dt>
-                <dd data-i18n-en="illustrated identity, art direction, digital universe design">
-                  identité illustrée, direction artistique, création d’univers digital
-                </dd>
-              </div>
-              <div>
-                <dt data-i18n-en="year">année</dt>
-                <dd>2024</dd>
-              </div>
-            </dl>
-          </div>
-          <figure class="project-hero__visual glass-surface" data-tilt>
-            <img
-              src="../assets/images/project-constellation-hero.svg"
-              alt="Illustrations Constellation avec personnages inclusifs"
-              width="520"
-              height="520"
-            />
-          </figure>
-        </div>
-      </section>
-
-      <section class="project-story" data-animate="fade-in">
-        <div class="container project-story__inner">
-          <article class="glass-surface">
-            <h2 data-i18n-en="stories that connect">histoires qui relient</h2>
-            <p
-              data-i18n-en="Constellation needed a strong identity that speaks to both children and educational partners."
-            >
-              Constellation avait besoin d’un univers fort qui s’adresse aux enfants comme aux structures éducatives.
-            </p>
-            <p
-              data-i18n-en="I designed modular stellar shapes and inclusive characters that evolve according to each workshop."
-            >
-              J’ai dessiné des formes stellaires modulaires et des personnages inclusifs qui évoluent au fil des ateliers.
-            </p>
-            <ul>
-              <li data-i18n-en="Aurora-inspired palette mixing deep navy, turquoise and chartreuse flashes.">
-                Palette aurorale mêlant marine profond, turquoise et accents chartreuse.
-              </li>
-              <li data-i18n-en="Modular vector illustrations adaptable to print and digital touchpoints.">
-                Illustrations vectorielles modulaires adaptées aux supports imprimés et digitaux.
-              </li>
-              <li data-i18n-en="Enthusiastic editorial voice inviting everyone to explore together.">
-                Ton éditorial enthousiaste qui invite à explorer ensemble.
-              </li>
-            </ul>
-          </article>
-          <aside class="project-sidenote glass-surface">
-            <h3 data-i18n-en="deliverables">livrables</h3>
-            <ul>
-              <li data-i18n-en="modular illustration system">système d’illustrations modulaires</li>
-              <li data-i18n-en="animated social toolkit">kit social media animé</li>
-              <li data-i18n-en="educational deck & worksheets">kit pédagogique & fiches ateliers</li>
-            </ul>
-          </aside>
-        </div>
-      </section>
-
-      <section class="project-gallery" data-animate="fade-up">
-        <div class="container project-gallery__grid">
-          <figure class="glass-surface">
-            <img
-              src="../assets/images/project-constellation-board.svg"
-              alt="Planche d’illustrations Constellation"
-              width="720"
-              height="520"
-              loading="lazy"
-            />
-            <figcaption data-i18n-en="Constellation illustration board">Planche d’illustrations Constellation</figcaption>
-          </figure>
-          <figure class="glass-surface">
-            <img
-              src="../assets/images/project-constellation-kit.svg"
-              alt="Supports pédagogiques Constellation"
-              width="720"
-              height="520"
-              loading="lazy"
-            />
-            <figcaption data-i18n-en="Modular learning materials">Supports pédagogiques modulaires</figcaption>
-          </figure>
-        </div>
-      </section>
-
-      <section class="project-cta glass-surface" data-animate="fade-in">
-        <div class="container project-cta__inner">
-          <div class="project-cta__text">
-            <h2 data-i18n-en="ready to imagine what’s next?">prêt·e à imaginer la suite ?</h2>
-            <p
-              data-i18n-en="I craft identities that make people crave the next chapter. Let’s write yours together."
-            >
-              Je crée des identités qui donnent envie de tourner la page suivante. Écrivons la vôtre ensemble.
-            </p>
-          </div>
-          <div class="project-cta__actions">
-            <a class="btn btn--primary" href="../index.html#contact" data-i18n-en="email petitchardon"
-              >écrire à petitchardon</a
-            >
-            <a class="btn btn--ghost" href="../index.html#portfolio" data-i18n-en="back to portfolio"
-              >retour au portfolio</a
-            >
+            <div class="project-cta__actions">
+              <a class="btn btn--primary" href="../index.html#portfolio" data-i18n-en="back to portfolio">
+                retour au portfolio
+              </a>
+              <a class="btn btn--ghost" href="../index.html#contact" data-i18n-en="contact">
+                contact
+              </a>
+            </div>
           </div>
         </div>
       </section>
@@ -256,7 +132,7 @@
         <div class="footer__brand">
           <img src="../assets/images/logo-petitchardon.svg" alt="petitchardon" width="140" height="56" />
           <p data-i18n-en="Creative studio crafting bold brand identities, illustrations and storytelling.">
-            Studio créatif pour identités visuelles, illustrations et récits de marque à forte personnalité.
+            Studio creatif pour identites visuelles, illustrations et recits de marque a forte personnalite.
           </p>
         </div>
         <div class="footer__links">
@@ -269,7 +145,7 @@
           </ul>
         </div>
         <div class="footer__social">
-          <h3 data-i18n-en="stay connected">restez connectée</h3>
+          <h3 data-i18n-en="stay connected">restez connecte</h3>
           <ul>
             <li><a href="https://www.instagram.com/petitchardon" target="_blank" rel="noreferrer">instagram</a></li>
             <li><a href="https://www.behance.net/petitchardon" target="_blank" rel="noreferrer">behance</a></li>
@@ -277,12 +153,12 @@
           </ul>
         </div>
         <div class="footer__legal" id="mentions-legales">
-          <h3 data-i18n-en="legal">mentions légales</h3>
+          <h3 data-i18n-en="legal">mentions legales</h3>
           <p
-            data-i18n-en="© <span id=&quot;annee-actuelle&quot;></span> petitchardon · All rights reserved · SIREN 000 000 000. Data used only to reply to your request. Hosting: to be completed. Publisher: Anne, petitchardon."
+            data-i18n-en="© <span id=\"annee-actuelle\"></span> petitchardon | All rights reserved | SIREN 000 000 000. Data used only to reply to your request. Hosting: to be completed. Publisher: Anne, petitchardon."
           >
-            © <span id="annee-actuelle"></span> petitchardon · Tous droits réservés · SIREN 000 000 000. Données utilisées
-            uniquement pour répondre à votre demande. Hébergement : à compléter. Responsable de publication : Anne, petitchardon.
+            © <span id="annee-actuelle"></span> petitchardon | Tous droits reserves | SIREN 000 000 000. Donnees utilisees
+            uniquement pour repondre a votre demande. Hebergement : a completer. Responsable de publication : Anne, petitchardon.
           </p>
         </div>
       </div>
