--- a/index.html
+++ b/index.html
@@ -186,19 +186,18 @@
         <div class="hero__background" aria-hidden="true"></div>
         <div class="container hero__inner">
           <div class="hero__copy">
-            <span class="hero__tag" data-i18n-en="graphic design · illustration · copywriting studio">graphisme · illustration · rédaction</span>
+            <span class="hero__tag" data-i18n-en="graphic design · illustration · copywriting">graphisme · illustration · rédaction</span>
             <h1 data-i18n-en="make your brand impossible to forget">faites-vous remarquer</h1>
             <p class="hero__location seo-hidden" data-i18n-en="Graphic designer & web designer in Rambouillet (Yvelines), creating logos, visual identities and websites.">
               Graphiste & webdesigner à Rambouillet (Yvelines), je crée logos, identités visuelles et sites web.
             </p>
             <p
               class="hero__intro"
-              data-i18n-en="I craft brand identities the same way I tell a story: yours. I help daring brands leave a lasting mark in everyone's imagination."
+              data-i18n-en="I craft a brand identity like telling a story: yours. Make it stick in the collective imagination."
             >
-              Je façonne des identités comme on raconte une histoire : la vôtre. J"accompagne les marques audacieuses qui
-              veulent s'imprimer durablement dans l'imaginaire collectif.
+              Faconner une identite, comme une histoire : la votre. S'imprimer durablement dans l'imaginaire collectif.
             </p>
-            <p class="hero__services">Logo - Charte graphique - Support print et digital - Site internet - Réseaux sociaux - Illustration</p>
+            <p class="hero__services">logo - identité visuelle - site web - réseaux sociaux - illustration</p>
             <div class="hero__cta">
               <a class="btn btn--primary" href="#portfolio" data-i18n-en="view projects">voir les projets</a>
               <a class="btn btn--ghost" href="#contact" data-i18n-en="let's talk about your story">parlons du vôtre</a>
@@ -587,6 +586,10 @@
     <script src="js/main.js" defer></script>
   </body>
 </html>
+
+
+
+
 
 
 
